# newbdd

./: .gitmodules  CMakeLists.txt
application/: CMakeLists.txt
application/aigbdd/: AigBdd.cpp  AigBdd.h
application/transduction/: Transduction.cpp  Transduction.h  TransductionCspf.cpp  TransductionMergeDecompose.cpp  TransductionMspf.cpp  TransductionResub.cpp  TransductionScript.cpp
include/: AigBdd.h  NewBdd.h  NewBddCache.h  NewBddMan.h  NewBddNode.h  NewBddTypes.h  Transduction.h
lib/: CMakeLists.txt
src/: AigBdd.cpp  NewBdd.cpp  NewBddApi.cpp  NewBddMan.cpp  NewBddManApi.cpp  NewBddNode.cpp  Transduction.cpp  TransductionCspf.cpp  TransductionMergeDecompose.cpp  TransductionMspf.cpp  TransductionResub.cpp  main.cpp
test/: aig2bdd.cpp  aig2bdd_gc.cpp  aig2bdd_gctest.cpp  aig2bdd_reo.cpp  aig2bdd_reotest.cpp  aig2bdd_reotest2.cpp  tra.cpp  tra_test.cpp  transduction.cpp  transduction_test.cpp
test/script/: iwls2022.txt  iwls2022_small.txt  iwls2022_small2.txt  iwls2022_small3.txt  mcnc-comb.txt  mcnc-comb_small.txt  mcnc-pla.txt  mcnc-pla_large.txt  mcnc-pla_small.txt  rerun_transduction.sh  run_abc_optimiztion.sh  run_aig2bdd.sh  run_aig2bdd_gc.sh  run_aig2bdd_gctest.sh  run_aig2bdd_reo.sh  run_aig2bdd_reotest.sh  run_aig2bdd_reotest2.sh  run_aig2bdd_test.sh  run_alltests.sh  run_min.py  run_tra_test.sh  run_tra_test_cspf.sh  run_transduction.sh  run_transduction_cspf.sh  run_transduction_cspf_test.sh  run_transduction_large.sh  run_transduction_small.sh  run_transduction_test.sh  run_transduction_test_large.sh  run_transduction_test_small.sh  setup_oldbdd.sh
